# cryptography

./: README.md  biome.json  commitlint.config.js  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json
.husky/: pre-commit
crates/crypto-engine/: Cargo.toml
crates/crypto-engine/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/lessons/asymmetric/dh/: page.tsx
src/app/lessons/challenges/xor/: page.tsx
src/app/lessons/ecc/curves/: page.tsx
src/app/lessons/hashing/sha256/: page.tsx
src/app/lessons/primitives/xor/: page.tsx
src/app/lessons/signatures/dsa/: page.tsx
src/app/styles/: utilities.css
src/components/canvas/: GuideCue.tsx  Scene.tsx  Starfield.tsx  TopicCluster.tsx
src/components/dom/: CommsOverlay.tsx  CurriculumGrid.tsx  ModuleCard.tsx  SyllabusOverlay.tsx  Terminal.tsx
src/components/layout/: LessonLayout.tsx  Loader.tsx
src/features/asymmetric/: ColorExchange.tsx
src/features/challenges/: XorChallenge.tsx
src/features/ecc/: CurveGraph.tsx
src/features/hashing/: HashMirror.tsx
src/features/primitives/: XORScene.tsx
src/features/primitives/components/: Bit.tsx  TruthTableHUD.tsx
src/features/signatures/: DigitalSeal.tsx
src/features/symmetric/: AESCube.tsx
src/hooks/: useGameSound.ts  useIdleDetector.ts  useScramble.tsx
src/lib/constants/: curriculum.ts
src/lib/wasm/crypto-engine/: crypto_engine.d.ts  crypto_engine.js  crypto_engine_bg.wasm  crypto_engine_bg.wasm.d.ts  package.json
src/stores/: useGuidanceStore.ts  useLessonStore.ts
src/types/: maath.d.ts
(+1 files in other folders)
