[package]
name = "crypto-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
aes = "0.8"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"

[profile.release]
opt-level = "s"
lto = true
